src/main/scala/ScalaIdioms/output/RunScalaColonRestriction.output
ScalaColonRestriction.scala:2: error: '=>' expected but '{' found.
  def method:() {}
                ^
ScalaColonRestriction.scala:2: error: identifier expected but ';' found.
  def method:() {}
                  ^
two errors found
